Fix issue where nav dropdown was behind image on contact page

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -26,6 +26,7 @@ $font-family-base: "Raleway", serif;
     top: 50%;
     transform: translate(-50%, -50%);
     font-size: 1.1rem;
+    z-index: 9999;
 }
 
 /* Footer */
